# llming-plumber

./: .env.example  .gitignore  CLAUDE.md  README.md  THIRD-PARTY-LICENSES.md  bakery.html  pyproject.toml
docs/: architecture.md  building-blocks.md  coding-principles.md
llming_plumber/: __init__.py  cli.py  config.py  db.py  main.py
llming_plumber/api/: __init__.py  blocks.py  demo.py  deps.py  events.py  files.py  health.py  inline_run.py  lemmings.py  llm_defaults.py  pipelines.py  runs.py  schedules.py  session.py  variables.py
llming_plumber/blocks/: base.py  limits.py  registry.py
llming_plumber/costs/: __init__.py  tracker.py
llming_plumber/docs/: architecture.md  blocks-azure.md  blocks-core.md  blocks-data.md  blocks-documents.md  blocks-government.md  blocks-llm.md  blocks-news.md  blocks-weather.md  blocks-web.md  building-blocks.md  coding-principles.md  data-piping.md  file-browser.md
llming_plumber/examples/: seed_pipelines.py
llming_plumber/llm/: __init__.py  llm_base_client.py  llm_base_models.py  messages.py
llming_plumber/models/: __init__.py  file_ref.py  log.py  mongo_helpers.py  ownership.py  parcel.py  pipeline.py  run.py  schedule.py
llming_plumber/scripts/: sync_providers.py
llming_plumber/ui/: app.js  index.html
llming_plumber/worker/: __init__.py  console.py  debug_trace.py  events.py  executor.py  pause.py  scheduler.py
static/icons/: ATTRIBUTION.md
tests/: conftest.py  local_sites.example.toml  test_config.py  test_main.py  test_registry.py
tests/api/: test_api.py  test_files.py
tests/blocks/: test_base.py  test_resource_limits.py  test_safe_eval.py
tests/costs/: test_tracker.py  test_tracker_integration.py
tests/fixtures/: SOURCES.md  generate_fixtures.py  known_data.csv  known_data.docx  known_data.json  known_data.md  known_data.parquet  known_data.pptx  known_data.xlsx  known_data.yaml  known_multi.yaml
tests/infra/: test_mongo_integration.py  test_redis_integration.py
tests/llm/: test_budget.py  test_budget_integration.py  test_providers.py  test_providers_integration.py
tests/models/: test_file_ref.py  test_models.py
tests/worker/: test_debug_trace.py  test_executor.py  test_pause.py  (+3 more)
(+208 files in other folders)
