[project]
name = "llming-plumber"
version = "0.1.0"
requires-python = ">=3.14"
license = "AGPL-3.0-or-later"
dependencies = [
    "fastapi[standard]",
    "httpx",
    "feedparser",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "beautifulsoup4",
    "jsonpath-ng",
    "openai>=2.0",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "tiktoken",
    "motor>=3.0",
    "redis[hiredis]>=5.0",
    "arq>=0.26",
    "structlog>=24.0",
    "croniter>=2.0",
    "azure-storage-blob>=12.0",
    "pdfplumber>=0.10",
    "pypdfium2>=5.0",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "python-docx>=1.0",
    "python-pptx>=1.0",
    "pyyaml>=6.0",
    "pyarrow>=15.0",
    "markdown>=3.5",
    "reportlab>=4.0",
]

[project.scripts]
llming-plumber = "llming_plumber.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "respx",
    "ruff",
    "mypy",
    "types-beautifulsoup4",
    "mongomock-motor",
    "fakeredis[lua]>=2.0",
]

[tool.setuptools.packages.find]
include = ["llming_plumber*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: calls real external APIs (requires .env with valid keys)",
]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
